--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
+    "i": "^0.3.7",
     "next": "12.2.5",
+    "npm": "^8.19.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-multi-carousel": "^2.8.2"
   },
   "devDependencies": {
     "@types/node": "18.7.3",
